[package]
name = "cascade"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
bytes = "1.10"
chrono = { version = "0.4.42", features = ["serde"] }
dashmap = "6.1"
moka = { version = "0.12.10", features = ["future"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "timeout"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# SSL/TLS dependencies (optional)
rustls-acme = { version = "0.14", features = ["axum"], optional = true }
rustls = { version = "0.23", optional = true }
tokio-rustls = { version = "0.26", optional = true }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
tokio-stream = { version = "0.1", features = ["net"], optional = true }
futures = { version = "0.3", optional = true }

dotenv = "0.15.0"
uuid = { version = "1.18.1", features = ["v4"] }

[features]
default = []
ssl = ["rustls-acme", "rustls", "tokio-rustls", "axum-server", "tokio-stream", "futures"]
